tests/baselines/reference/parserSetAccessorWithTypeAnnotation1.errors.txt
tests/cases/conformance/parser/ecmascript5/Accessors/parserSetAccessorWithTypeAnnotation1.ts(2,8): error TS1050: A 'set' accessor must have a corresponding 'get' accessor.
tests/cases/conformance/parser/ecmascript5/Accessors/parserSetAccessorWithTypeAnnotation1.ts(2,8): error TS1095: A 'set' accessor cannot have a return type annotation.


==== tests/cases/conformance/parser/ecmascript5/Accessors/parserSetAccessorWithTypeAnnotation1.ts (2 errors) ====
    class C {
       set foo(v): number {
           ~~~
!!! error TS1050: A 'set' accessor must have a corresponding 'get' accessor.
           ~~~
!!! error TS1095: A 'set' accessor cannot have a return type annotation.
       }
    }